minikube/root/resources/statefulsets/jenkins/jenkins-service-stf.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-stf
spec:
  selector:
    app: jenkins-stf
  ports:
    - name: web
      port: 8080
    - name: agent
      port: 50000
